<resources>
    <string name="app_name">Sound Zones</string>
    <string name="welcome_text_title">Please adjust the next audio tracks to your preferred volume.</string>
    <string name="press_next_when_ready">Press \"Next\" when you are ready</string>
    <string name="press_next_when_ready_p2">Press \"Next\" when you are ready to proceed to part I/II</string>
    <string name="next">NEXT</string>
    <string name="intro_title">You will soon begin part I/II</string>
    <string name="intro_ready"><u>Note: Once you press \"Next\", you will not be able to return and correct your selection.</u></string>
    <string name="any_questions">Any questions?</string>
    <string name="pre_assessment">Pre-Assessment</string>
    <string name="set">SET</string>
    <string name="acceptable">Acceptable</string>
    <string name="great">Great</string>
    <string name="ip_address">IP Address</string>
    <string name="settings">Settings</string>

    <string name="you_can_have_break">You can have a %d minutes break</string>
    <string name="thank_you_for_participating">Thank you for participating!</string>
    <string name="thank_you_for_p1_a">Thank you for completing part I/II :‑)️</string>
    <string name="done">Done</string>

    <string name="omg_html"><![CDATA[<ul><li>Your task is to adjust the volume of the second track twice:</li><ul><li></li><li></li></ul><li>As long as you don\'t press the \"NEXT\" button, you may refine your selection.</li></ul>]]></string>
    <string name="e1">\u25CF You will be listening to one audio track and after a few seconds, a second track will play, simultaneously with the first one</string>
    <string name="e2">\u25CF Your task is to adjust the volume of the second track twice:</string>
    <string name="e3">\u25CF In the 1st adjustment, please adjust the volume so that the interference of the 2nd track is reasonable or ACCEPTABLE.</string>
    <string name="e4">\u25CF In the 2nd adjustment, please adjust the volume of the 2nd track so that your listening experience of the 1st track is GREAT:</string>
    <string name="e5">\u25CF As long as you don\'t press the \"NEXT\" button, you may refine your selection.</string>
</resources>
