<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/bg"
              android:gravity="center"
              android:orientation="vertical"
              android:paddingEnd="@dimen/layout_padding"
              android:paddingStart="@dimen/layout_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="@dimen/text_margin_top"
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/text_size"
            tools:text="@string/intro_title"/>

        <TextView
            android:id="@+id/tvDesc1"
            android:lineSpacingExtra="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_top"
            android:gravity="center"
            android:textSize="@dimen/text_size"
            tools:text="@string/thank_you_for_p1_a"/>

        <TextView
            android:id="@+id/tvDesc2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_top"
            android:textSize="@dimen/text_size"
            android:gravity="center"
            tools:text="hello"/>

        <TextView
            android:id="@+id/tvDesc3"
            android:textSize="@dimen/text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_top"
            android:gravity="center"
            android:text="@string/intro_ready"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDesc4"
            android:textSize="@dimen/text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            />

        <TextView
            android:id="@+id/tvDesc5"
            android:textSize="@dimen/text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            tools:text="@string/any_questions"
            />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_marginBottom="10dp"
            android:background="@color/label_color"
            android:paddingBottom="10dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:text="@string/next"
            android:textColor="@android:color/white"
            android:visibility="invisible"
            tools:visibility="visible"/>
    </RelativeLayout>

</LinearLayout>